# citadel

./: .gitignore  Cargo.toml  LICENSE  README.md  README.txt
.claude/: settings.local.json
content/: test.md
hawkwood-corporation/: Cargo.toml
hawkwood-corporation/src/: citadel.rs  data.rs  lib.rs  main.rs  page_types.rs  pages.rs  prelude.rs  sections.rs  site.rs  systems.rs
hawkwood-corporation/src/data/: head.rs  nav.rs  site.rs
hawkwood-corporation/src/page_types/: blog_post.rs  homepage.rs
hawkwood-corporation/src/pages/: homepage.rs
hawkwood-corporation/src/parts/: directive_buttons.rs  nav_toggle.rs
hawkwood-corporation/src/sections/: column_hero.rs  css.rs  head.rs  header.rs  homepage_hero.rs
hawkwood-corporation/src/systems/: assets_system.rs  cleanup_system.rs  css_system.rs  decree_system.rs  nav_system.rs  pages_system.rs  sections_system.rs  write_files_system.rs
public/: index.html
site/: Cargo.toml
site/src/: data.rs  main.rs  old.rs  pages.rs  sections.rs  types.rs
site/src/data/: nav.rs  reviews.rs  (+2 more)
src/: lib.rs  main.rs  prelude.rs  site.rs
src/page_types/: blog_post.rs  homepage.rs
src/parts/: directive_buttons.rs  nav_toggle.rs
src/public/: about.html  another-blog-post.html  intelligence.html  my-first-blog-post.html
src/sections/: column_hero.rs  head.rs  header.rs  old_css.rs
src/systems/: assets_system.rs  cleanup_system.rs  content_system.rs  css_system.rs  decree_system.rs  head_system.rs  nav_system.rs  pages_system.rs  placements_system.rs  sections_system.rs  sitemap_system.rs  write_files_system.rs
