[package]
name = "citadel"
version = "0.1.0"
edition = "2024"
description = "Sovereign static site platform built with Rust"
license = "SEE LICENSE FILE"
repository = "https://github.com/hawkwood-corporation/citadel"
homepage = "https://github.com/hawkwood-corporation/citadel"

[dependencies]
pulldown-cmark = { version = "0.13.0", optional = true }
slugify = "0.1.0"
url = "2.5.4"

[features]
default = ["markdown"]  # This feature is on by default!
markdown = ["pulldown-cmark"]